updating react router links

--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -62,7 +62,7 @@
           display: flex;
           color: $gallery;
           flex: 1 1 100%;
-          font-family:'Grand Hotel', cursive;
+          font-family:'Alfa Slab One';
           font-size: 2.0em;
           font-weight: 700;
           // margin: 0.2em 0;
