--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -3,8 +3,8 @@ $values: 0 0 100px;
 $border-radius: 4px;
 $border-radius-half: 2px;
 
-$color-default: #F0F3F2;
-$badass: #BADA55;
+// $color-default: #F0F3F2;
+// $badass: #BADA55;
 $darkblue: #282c34;
 $white: white;
 $black: black;
