--- a/src/scss/grid-cards.scss
+++ b/src/scss/grid-cards.scss
@@ -48,7 +48,7 @@
         margin: 1em auto 1.5em auto;
         overflow: hidden;
         position: relative;
-        background-color: white;
+        background-color: $white;
 
         img.card-pic-fellowship{
           border: 0px ;
@@ -71,7 +71,7 @@
       img.logo-pic{
         border: 1px solid black  ;
         margin:0.4rem;
-        background-color: white;
+        background-color: $white;
         width: 95%;
         max-height: 190px;
         object-fit: contain;
@@ -183,7 +183,7 @@
 
   h3.page-title{
     font-family: 'Oswald', sans-serif;
-    font-weight: 500;
+    font-weight: 400;
     font-size: 2.2em;
     color: $ivy;
     text-indent: 0;
@@ -193,14 +193,14 @@
 
   .card-title{
     font-family: 'Oswald', sans-serif;
-    font-weight: 500;
+    font-weight: 400;
     font-size: 1.5em;
     color: $ivy;
     text-align: center;
     margin: 2rem;
   }
   .card-name{
-    font-family: 'Grand Hotel', serif;
+    font-family: 'Alfa Slab One', serif;
     font-weight: 700;
     font-size: 1.85em;
     color: $ivy;
@@ -209,7 +209,7 @@
     line-height: 2.5;
   }
   .prof-name{
-    font-family: 'Quattrocento Sans', sans-serif;
+    font-family: 'Nova Square', sans-serif;
     font-weight: 700;
     font-size: 1.4em;
     color: $ivy;
@@ -217,15 +217,15 @@
     margin: 0.4em 0 0.2em;
   }
   .prof-area{
-    font-family: 'Quattrocento Sans', sans-serif;
-    font-weight: 500;
+    font-family: 'Nova Square', sans-serif;
+    font-weight: 400;
     font-size: 1.1em;
     color: $black-60;
     text-align: center;
     margin-bottom: 0.2em;
   }
   .card-advisor{
-    font-family: 'Quattrocento Sans', sans-serif;
+    font-family: 'Nova Square', sans-serif;
     font-weight: 400;
     font-size: 1em;
     color: $black-60;
@@ -244,7 +244,7 @@
 
   .courses{
     font-family: 'Oswald', sans-serif;
-    font-weight: 300;
+    font-weight: 200;
     font-size: 1em;
     margin: 1em 0 0 2em;
     text-indent: 0;
@@ -253,7 +253,7 @@
   }
   .courses-title{
     font-family: 'Oswald', sans-serif;
-    font-weight: 300;
+    font-weight: 200;
     font-size: 1em;
     margin: 0 0 2em 2em;
     text-indent: 0;
@@ -265,7 +265,7 @@
   li,
   .card-bottom > p{
     font-family: 'Oswald', sans-serif;
-    font-weight: 300  ;
+    font-weight: 200  ;
     font-size: .9em;
     color: $black-60;
     text-align: left;
@@ -313,7 +313,7 @@
   }
 
   .card-name{
-    font-family: 'Grand Hotel', sans-serif;
+    font-family: 'Alfa Slab One', sans-serif;
     font-size: 1.85em;
     color: $ivy;
     text-justify: center;
