--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -24,7 +24,6 @@
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
-    color: white;
     filter: grayscale(0.85);
     position: relative;
     transition:
@@ -33,7 +32,6 @@
       filter 0.3s ease-in-out 0.3s,
       font-size 0.7s cubic-bezier(0.6,-0.5, 0.7,-0.1),
       flex 0.7s cubic-bezier(0.6,-0.5, 0.7,-0.1);
-
     .panelContent {
       display: flex;
       flex: 1 1 100%;
@@ -42,18 +40,16 @@
       margin: 0 0.5em 0 1em;
       align-items: flex-start;
       flex-direction: column;
-
       .panelTextBox{
         display: flex;
         flex-direction: column;
         min-width: 5rem;
         max-width: 10rem;
         margin: 0;
-
         .panelTitle, .panelFirstName {
           display: flex;
           flex: 1 1 100%;
-          font-family:'Quattrocento Sans', sans-serif;
+          font-family:'Nova Square', sans-serif;
           font-size: 1.3em;
           letter-spacing: 0.1ch;
           text-shadow: 0 4px 6px rgba(0, 0, 0, 0.72);
@@ -63,8 +59,8 @@
           color: $gallery;
           flex: 1 1 100%;
           font-family:'Alfa Slab One';
-          font-size: 2.0em;
-          font-weight: 700;
+          font-size: 1.8em;
+          // font-weight: 200;
           // margin: 0.2em 0;
           text-shadow: 0 4px 10px rgba(0, 0, 0, 0.72);
         }
@@ -73,21 +69,20 @@
         display: flex;
         max-width: 6rem;
         line-height: 1.4;
-        font-family:'Quattrocento Sans', sans-serif;
+        font-family:'Nova Square', sans-serif;
         font-size: 1.3em;
         opacity: 0;
         text-shadow: 0 4px 6px rgba(0, 0, 0, 0.72);
         margin: 0;
         padding: 0.5em 1em 0.5em 0;
       }
-
     } //end panelContent
 
     .panelLinkButton{
       display: flex;
       bottom: 12%;
-      font-family:'Quattrocento Sans', sans-serif;
-      font-weight: 700;
+      font-family:'Nova Square', sans-serif;
+      // font-weight: 700;
       width: 5em;
       height: 1.3em;
       opacity: 0;
@@ -103,8 +98,6 @@
           color: transparent;
       }
     }
-
-
     &:hover{
       transition: filter 0.3s, min-width 0.3s ease-in-out 0.3s;
       filter: grayscale(0.01);
@@ -118,11 +111,8 @@
         transition: opacity 1.5s ease-in-out 0.3s;
         opacity: 1;
       }
-
     }
   } // end of .panel
-
-
 } //end panelsContainer
 
 @media only screen and (max-width: 1200px) {
@@ -171,8 +161,6 @@
       }
     }
   }
-
-
 
   .article {
     margin-left: 4%;
