--- a/src/scss/grid-layout.scss
+++ b/src/scss/grid-layout.scss
@@ -24,7 +24,7 @@
     font-family: 'Oswald', sans-serif;
     font-weight: 400;
     font-size: 2.2em;
-    color: $ivy;
+    color: $ubatuba;
     text-indent: 0;
     margin: 0.5em 0 0.5em 0;
     background: transparent;
@@ -71,7 +71,7 @@
     margin-bottom: 1.5em;
     text-indent: 0;
     text-align: left;
-    color: $ivy;
+    color: $ubatuba;
   }
 
   .page-img{
@@ -133,7 +133,7 @@
       transition: all 0.3s;
       box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.15), 0 2px 3px rgba(0, 0, 0, 0.20);
       border-radius: $border-radius-half;
-      border: 1px solid  $ivy;
+      border: 1px solid  $ubatuba;
     }
     img.fac:hover{
       box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.3), 0 4px 4px rgba(0, 0, 0, 0.30);
@@ -211,7 +211,7 @@
   }
   .faculty-caption{
     margin-bottom: 2em;
-    color: $ivy;
+    color: $ubatuba;
   }
 
 }
