--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -56,7 +56,7 @@
         }
         .panelName {
           display: flex;
-          color: $gallery;
+          color: $LightSteelBlue;
           flex: 1 1 100%;
           font-family:'Alfa Slab One';
           font-size: 1.8em;
