--- a/src/scss/navigation.scss
+++ b/src/scss/navigation.scss
@@ -31,7 +31,7 @@
 
     a, li.menu-item{
       // justify-self: flex-end;
-      color: $ivy;
+      color: $gray-40;
       padding-left: 1.2em;
       padding-bottom: 0.3em;
       font-family: Oswald;
@@ -44,11 +44,11 @@
 
       &:hover{
         transform: all .4s ease-out;
-        color: $berry;
+        color: $WhiteSmoke;
       }
       &:active{
         transform: all .4s ease-out;
-        color: $berry;
+        color: $WhiteSmoke;
       }
     }
 
