--- a/src/scss/article.scss
+++ b/src/scss/article.scss
@@ -7,7 +7,7 @@
   flex-wrap: wrap;
   flex-direction: column;
   margin: 0 12% 2em 12%;
-  background: $sweetleaf--30;
+  background-color: $ubatuba--50;
   // background-image:  url("../assets/images/overlay.png");
   overflow: hidden;
 
@@ -37,8 +37,8 @@
         top: 0;
         height: 180px;
         width: 100%;
-        background: rgb(99,62,84);
-        background: linear-gradient(rgba(58, 76, 105, 0.7), rgba(52, 65, 105, 0.7));
+        background: $menublue--50;
+        // background: linear-gradient(rgba(58, 76, 105, 0.7), rgba(52, 65, 105, 0.7));
 
         transition: all .3s ease-in-out;
         opacity:0.5;
@@ -78,8 +78,8 @@
         width: 9rem;
         height: 9rem;
         overflow: hidden;
-        background-color: $white;
-        border: 1px solid $ivy;
+        background-color: $gray-60;
+        border: 1px solid $ubatuba;
         border-radius: $border-radius;
         box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.15), 0 2px 3px rgba(0, 0, 0, 0.20);
         margin: 0 2rem 0 2px ;
@@ -101,25 +101,25 @@
         position: relative;
         margin-bottom: 3rem;
         font-size: 1rem;
-        color: $ivy;
+        color: $gray-20;
 
         .headline-lead {
           font-family: 'Oswald', sans-serif;
           font-weight: 200;
           font-size: 1.3em;
-          color: $black-60;
+          color: $gray-40;
         }
         .headline{
           font-family: 'Nova Square', sans-serif;
           font-weight: 700;
           font-size: 2.8em;
-          // color: $ivy;
+          color: $gray-40;
         }
         .subhead{
           font-family: 'Oswald', sans-serif;
           font-weight: 200;
           font-size: 1.8em;
-          color: $black-60;
+          color: $gray-40;
         }
       }
     }
@@ -134,7 +134,7 @@
       text-indent: 2em;
       line-height: 1.8;
       margin-top: -40px;
-      color: $black-80;
+      color: $gray-20;
 
       span.text-body{
         font-family: "Libre Caslon Text", serif;
@@ -145,7 +145,7 @@
         margin-bottom:1.5em;
       }
       a{
-        color: $black-95;
+        color: $gray-20;
       }
       span.first-letter{
         font-family: 'Alfa Slab One', cursive, "Times", "Times New Roman";
@@ -153,7 +153,7 @@
         font-size: 2.5em;
         float: left;
         margin: -0.2em .4em 0 0;
-        color: $ivy;
+        color: $Silver;
         text-indent: 0;
       }
     }
@@ -252,13 +252,13 @@
     font-weight: 400;
     font-style: italic;
     font-size: 0.9em;
-    color: $black-80;
+    color: $gray-80;
     transition: all .3s ease-in-out;
     margin: 0 .3em;
     cursor: pointer;
 
     &:hover{
-      color: $berry;
+      color: $ubatuba;
     }
   }
 }  //end or article
