--- a/src/scss/article.scss
+++ b/src/scss/article.scss
@@ -81,7 +81,7 @@
         background-color: $gray-60;
         border: 1px solid $ubatuba;
         border-radius: $border-radius;
-        box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.15), 0 2px 3px rgba(0, 0, 0, 0.20);
+        box-shadow: $box-shadow;
         margin: 0 2rem 0 2px ;
         margin-right: 4rem;
         transition: all 0.1s ease-in-out;
@@ -93,7 +93,7 @@
         }
 
         &:hover{
-          box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.3), 0 4px 5px rgba(0, 0, 0, 0.50);
+          box-shadow: $box-shadow3;
         }
       }
 
@@ -153,7 +153,7 @@
         font-size: 2.5em;
         float: left;
         margin: -0.2em .4em 0 0;
-        color: $Silver;
+        color: $gray-50;
         text-indent: 0;
       }
     }
@@ -249,9 +249,9 @@
   }
   .link, a.link{
     font-family: 'Libre Caslon Text', sans-serif;
-    font-weight: 400;
+    font-weight: 200;
     font-style: italic;
-    font-size: 0.9em;
+    font-size: 0.7em;
     color: $gray-80;
     transition: all .3s ease-in-out;
     margin: 0 .3em;
