--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -3,8 +3,8 @@
 
 .site-footer{
   display: flex;
-  background-color: $WhiteSmoke;
-  opacity: 0.6;
+  background-color: $background--80;
+  opacity: 0.8;
   height: 45px;
   width: 100%;
   bottom: 0;
@@ -17,7 +17,8 @@
   .footer-logo{
     display: flex;
     align-self: center;
-    padding-top: 0.3em;
+    padding-top: 0.1em;
+    padding-bottom: 0.3em;
     padding-left: 3em;
     img {
       max-width: 170px;
@@ -31,6 +32,6 @@
     padding-left: 2em;
     font-size: .9rem;
     line-height: 1.2rem;
-    color: $gray-60;
+    color: $gray-40;
   }
 }
