--- a/src/scss/grid-cards.scss
+++ b/src/scss/grid-cards.scss
@@ -27,7 +27,7 @@
     text-indent: 0;
 
     .card {
-      box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.15), 0 2px 3px rgba(0, 0, 0, 0.20);
+      box-shadow: $box-shadow;
       transition: all 0.3s ease-in-out;
       min-width: 320px;
       min-height: 300px;
@@ -85,14 +85,14 @@
 
       &:hover {
         transition: all 0.3s ease-in-out;
-        box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.3), 0 4px 4px rgba(0, 0, 0, 0.40);
+        box-shadow: $box-shadow3;
       }
     }     // END of CARD
 
     .card-partner{
       display: grid;
       grid-auto-flow: row;
-      box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.15), 0 2px 3px rgba(0, 0, 0, 0.20);
+      box-shadow: $box-shadow;
       transition: all 0.3s ease-in-out;
       min-width: 320px;
       min-height: 200px;
@@ -116,7 +116,7 @@
       }
 
       &:hover {
-        box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.3), 0 4px 4px rgba(0, 0, 0, 0.40);
+        box-shadow: $box-shadow3;
       }
     }
   }  // end of card-deck
@@ -153,7 +153,7 @@
     max-width: 100%;
 
     .card{
-      box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.15), 0 2px 3px rgba(0, 0, 0, 0.20);
+      box-shadow: $box-shadow;
       transition: all 0.3s ease-in-out;
       border-radius: $border-radius;
       border: 1px solid $gray-60;
@@ -172,7 +172,7 @@
 
       &:hover {
         transition: all 0.3s ease-in-out;
-        box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.3), 0 4px 4px rgba(0, 0, 0, 0.40);
+        box-shadow: $box-shadow3;
       }
 
 
@@ -304,7 +304,7 @@
     width: 150px;
     height: 150px;
     transition: all 3.3s ease;
-    box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.15), 0 2px 3px rgba(0, 0, 0, 0.20);
+    box-shadow: $box-shadow;
   }
 
   .card.book{
