--- a/src/scss/page-submenu.scss
+++ b/src/scss/page-submenu.scss
@@ -50,7 +50,7 @@
 
           &.active {
             transition: all .3s ease-in-out;
-            color: $WhiteSmoke;
+            color: $gray-10;
           }
         }
       }
@@ -62,7 +62,7 @@
       .bubble-frame{
         transition: all .4s ease-in-out;
         border: 1px solid $ubatuba;
-        box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.15), 0 2px 3px rgba(0, 0, 0, 0.20);
+        box-shadow: $box-shadow;
         filter: grayscale(0.1);
       }
     }
@@ -74,7 +74,7 @@
 
       .bubble-frame{
         border: 1px solid $ubatuba--70;
-        box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.2), 0 3px 4px rgba(0, 0, 0, 0.4);
+        box-shadow: $box-shadow3;
         filter: brightness(0.8);
         transition: all .3s ease-in-out;
       }
